@@ -4,6 +4,7 @@
 Version 2.18
 	Fixed issue 406: keyboard language changes in commit dialog
 	Fixed issue 415: Diffs in Stash view are reversed
+	Fixed issue 417: popup complains about missing .gitconfig on Linux
 	Added hotkeys for ShowAllBranches and ShowCurrentBranchOnly
 	Added more commandline options
 	Show current branch in Visual Studio toolbar
